cmake_minimum_required(VERSION 3.13)
project(saper)
set(CMAKE_CXX_STANDARD 11)
add_executable(saper main.cpp Minesweeperboard.cpp Minesweeperboard.h MSBoardTextView.cpp MSBoardTextView.h MSSFMLView.cpp MSSFMLView.h MSTextController.cpp MSTextController.h)
# Detect and add SFML
set(SFML_PATH "C:/SFML-2.5.1" ${CMAKE_MODULE_PATH})
set(SFML_DIR ${SFML_PATH}/lib/cmake/SFML)
find_package(SFML 2 REQUIRED graphics window system)
if(SFML_FOUND)
    target_link_libraries(saper sfml-graphics sfml-window sfml-audio)
    include_directories(${SFML_PATH}/include/SFML/)
endif()